--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	<h1>Shopping List</h1>
+	<div class="container">
+		<h1>Shopping List</h1>
 	<p id="first">Get it done today</p>
 	<input id="userinput" type="text" placeholder="enter items">
 	<button id="enter">Enter</button>
@@ -17,6 +18,7 @@
 		<li>Birthday Cake</li>
 		<li>Candles</li>
 	</ul>
+	</div>
 	<script src="script.js"></script>
 </body>
 </html>
