--- a/index.html
+++ b/index.html
@@ -4,20 +4,25 @@
 	<title>Javascript + DOM</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<body>
+<body class="set-gradient">
 	<div class="container">
 		<h1>Shopping List</h1>
-	<p id="first">Get it done today</p>
-	<input id="userinput" type="text" placeholder="enter items">
-	<button id="enter">Enter</button>
-	<ul class="my-elements">
-		<li class="bold red">Notebook</li>
-		<li>Jello</li>
-		<li>Spinach</li>
-		<li>Rice</li>
-		<li>Birthday Cake</li>
-		<li>Candles</li>
-	</ul>
+		<div class="gradient-picker">
+			<p class="bg-change">You can change background color</p>
+			<input class="color1" type="color" name="color1" value="#94b394">
+			<input class="color2" type="color" name="color2" value="#A26767">
+		</div>
+		<p id="first">Get it done today</p>
+		<input id="userinput" type="text" placeholder="enter items">
+		<button id="enter">Enter</button>
+		<ul class="my-elements">
+			<li class="bold red">Notebook</li>
+			<li>Jello</li>
+			<li>Spinach</li>
+			<li>Rice</li>
+			<li>Birthday Cake</li>
+			<li>Candles</li>
+		</ul>
 	</div>
 	<script src="script.js"></script>
 </body>
