--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<h1>Shopping List</h1>
 		<div class="gradient-picker">
 			<p class="bg-change">You can change background color</p>
-			<input class="color1" type="color" name="color1" value="#94b394">
+			<input class="color1" type="color" name="color1" value="#7585a3">
 			<input class="color2" type="color" name="color2" value="#A26767">
 		</div>
 		<p id="first">Get it done today</p>
